test/asm/macro-args-outside-macro.err
error: macro-args-outside-macro.asm(1):
    '\1' cannot be used outside of a macro
error: macro-args-outside-macro.asm(2):
    '\<2>' cannot be used outside of a macro
error: macro-args-outside-macro.asm(3):
    '\#' cannot be used outside of a macro
error: Assembly aborted (3 errors)!
